fix(pie-thumbnail): DSW-2615 allow images to be cropped instead of shrinking

--- a/packages/components/pie-thumbnail/src/thumbnail.scss
+++ b/packages/components/pie-thumbnail/src/thumbnail.scss
@@ -60,5 +60,6 @@
     height: 100%;
     background-color: var(--thumbnail-bg-color);
     border-radius: var(--thumbnail-img-border-radius);
+    object-fit: cover;
   }
 }
